--- a/css/style.css
+++ b/css/style.css
@@ -285,13 +285,13 @@ span {
 
 .portfolio-layer h4 {
   font-size: 3rem;
-  color: var(--bg-color)
+  color: var(--bg-color);
 }
 
 .portfolio-layer p {
   font-size: 1.6rem;
   margin: 0.3rem 0 1rem;
-  color: var(--second-bg-color)
+  color: var(--second-bg-color);
 }
 
 .portfolio-layer a {
