--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   --bg-color: #f2f2f2;
   --second-bg-color: #d9d9d9;
   --text-color: #333;
-  --main-color: #2776ae;
+  --main-color: #27ae60;
 }
 
 html {
